--- a/style.css
+++ b/style.css
@@ -39,7 +39,9 @@ h1 {
 
 #contentGrid {
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  /* flex-direction: row; */
+  /* grid-template-columns: repeat(4, 1fr); */
+  grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 1vmin;
   grid-row-gap: 1vmin;
   background-color: #1E1E1E;
@@ -51,7 +53,8 @@ h1 {
   display: flex;
   flex-direction: column;
   padding: 1vmin;
-  color: #CFCFCF;
+  /* color: #CFCFCF; */
+  color: #1E1E1E;
   -webkit-box-shadow: 0px 0px 15px 5px rgba(0,0,0,0.62);
   box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.62);
   border: 2px solid #eee;
@@ -67,13 +70,14 @@ h1 {
   background-image: url('');
   background-size: cover;
   background-position: center;
-  height: 100px;
+  height: 350px;
   width: 100%;
 }
 
 .footerImage {
   width: 100%;
-  height: 100px;
+  /* height: 200px; */
+  height: 350px;
   object-fit: cover;
   border-radius: 0.25vmin;
 }
